# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
description = "Behavior-Driven Development (BDD) tests for Apache Iggy"
name = "bdd"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[features]
bdd = []

[dev-dependencies]
bytes = { workspace = true }
cucumber = "0.21"
iggy = { workspace = true }
integration = { workspace = true }
tokio = { workspace = true }

# `test` is set to false because cucumber uses its own test harness, which
# prevents running specific tests with commands like `cargo test some_test`.
# Besides that, those tests are executed in the CI pipeline.
[[test]]
name = "basic_messaging"
harness = false
required-features = ["bdd"]

[[test]]
name = "leader_redirection"
harness = false
required-features = ["bdd"]
