# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy"
version = "0.8.0"
description = "Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
edition = "2024"
license = "Apache-2.0"
keywords = ["iggy", "messaging", "streaming"]
categories = ["command-line-utilities", "database", "network-programming"]
homepage = "https://iggy.apache.org"
documentation = "https://iggy.apache.org/docs"
repository = "https://github.com/apache/iggy"
readme = "../../README.md"

[features]
default = ["tokio_lock"]
tokio_lock = []
# Moved to common crate. Not sure if this is even needed anymore
#fast_async_lock = ["dep:fast-async-mutex"]

[dependencies]
async-broadcast = { workspace = true }
async-dropper = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
# Can be removed if the feature above gets removed.
#fast-async-mutex = { version = "0.6.7", optional = true }
flume = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
iggy_binary_protocol = { workspace = true }
iggy_common = { workspace = true }
num_cpus = "1.17.0"
quinn = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
tungstenite = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
