# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "server-ng"
version = "0.7.3-edge.1"
edition = "2024"
license = "Apache-2.0"

[package.metadata.cargo-udeps.ignore]
normal = ["tracing-appender"]

[package.metadata.cargo-machete]
ignored = [
    "ahash",
    "anyhow",
    "argon2",
    "async-channel",
    "async_zip",
    "axum",
    "axum-server",
    "bytes",
    "chrono",
    "clap",
    "compio",
    "configs",
    "ctrlc",
    "cyper",
    "cyper-axum",
    "dashmap",
    "dotenvy",
    "err_trail",
    "error_set",
    "figlet-rs",
    "flume",
    "fs2",
    "futures",
    "hash32",
    "human-repr",
    "hwlocality",
    "iggy_binary_protocol",
    "iggy_common",
    "jsonwebtoken",
    "left-right",
    "metadata",
    "mimalloc",
    "mime_guess",
    "nix",
    "opentelemetry",
    "opentelemetry-appender-tracing",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "opentelemetry_sdk",
    "papaya",
    "prometheus-client",
    "rand",
    "ringbuffer",
    "rmp-serde",
    "rolling-file",
    "rust-embed",
    "rustls",
    "rustls-pemfile",
    "secrecy",
    "send_wrapper",
    "serde",
    "slab",
    "socket2",
    "strum",
    "sysinfo",
    "tempfile",
    "thiserror",
    "toml",
    "tower-http",
    "tracing-appender",
    "tracing-opentelemetry",
    "ulid",
    "uuid",
    "vergen-git2",
]

[[bin]]
name = "iggy-server-ng"
path = "src/main.rs"

[features]
default = ["mimalloc", "iggy-web"]
disable-mimalloc = []
mimalloc = ["dep:mimalloc"]
iggy-web = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-channel = { workspace = true }
async_zip = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
compio = { workspace = true }
configs = { workspace = true }
ctrlc = { workspace = true }
cyper = { workspace = true }
cyper-axum = { workspace = true }
dashmap = { workspace = true }
dotenvy = { workspace = true }
err_trail = { workspace = true }
error_set = { workspace = true }
figlet-rs = { workspace = true }
flume = { workspace = true }
fs2 = { workspace = true }
futures = { workspace = true }
hash32 = { workspace = true }
human-repr = { workspace = true }
iggy_binary_protocol = { workspace = true }
iggy_common = { workspace = true }
jsonwebtoken = { workspace = true }
left-right = { workspace = true }
metadata = { workspace = true }
mimalloc = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
nix = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }
papaya = { workspace = true }
prometheus-client = { workspace = true }
rand = { workspace = true }
ringbuffer = { workspace = true }
rmp-serde = { workspace = true }
rolling-file = { workspace = true }
rust-embed = { workspace = true, optional = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
secrecy = { workspace = true }
send_wrapper = { workspace = true }
serde = { workspace = true }
slab = { workspace = true }
socket2 = { workspace = true }
strum = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_env = "musl"))'.dependencies]
hwlocality = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
hwlocality = { workspace = true, features = ["vendored"] }

[build-dependencies]
vergen-git2 = { workspace = true }

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "warn"
