# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "server"
version = "0.5.0"
edition = "2024"
build = "src/build.rs"
license = "Apache-2.0"

[package.metadata.cargo-udeps.ignore]
normal = ["tracing-appender"]

[package.metadata.cargo-machete]
ignored = ["rust-s3"]

[[bin]]
name = "iggy-server"
path = "src/main.rs"

[features]
default = ["mimalloc"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
disable-mimalloc = []
mimalloc = ["dep:mimalloc"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
async_zip = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console-subscriber = { workspace = true, optional = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
enum_dispatch = { workspace = true }
err_trail = { version = "0.9.0" }
error_set = { version = "0.9.0" }
figlet-rs = { workspace = true }
figment = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
human-repr = { workspace = true }
iggy_common = { workspace = true }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
lending-iterator = "0.1.7"
mimalloc = { workspace = true, optional = true }
moka = { version = "0.12.11", features = ["future"] }
nix = { version = "0.30", features = ["fs"] }
once_cell = "1.21.3"
opentelemetry = { version = "0.31.0", features = ["trace", "logs"] }
opentelemetry-appender-tracing = { version = "0.31.1", features = ["log"] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "logs",
    "trace",
    "grpc-tonic",
    "http",
    "http-proto",
    "reqwest-client",
    "tokio",
] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = [
    "rt-tokio",
    "logs",
    "trace",
    "tokio",
    "experimental_async_runtime",
    "experimental_logs_batch_log_processor_with_async_runtime",
    "experimental_trace_batch_span_processor_with_async_runtime",
] }
prometheus-client = "0.24.0"
quinn = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls-no-provider"] }
ring = "0.17.14"
rust-s3 = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "2.2.0"
serde = { workspace = true }
serde_with = { workspace = true }
static-toml = "1.3.0"
strum = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { workspace = true }
twox-hash = { workspace = true }
ulid = "1.2.1"
uuid = { workspace = true }

[build-dependencies]
figment = { version = "0.10.19", features = ["json", "toml", "env"] }
vergen-git2 = { version = "1.0.7", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[dev-dependencies]
mockall = { workspace = true }
serial_test = { workspace = true }
